# nrs-util

./: .gitignore  .mcp.json  BUGS.md  CLAUDE.md  CMakeLists.txt  FACTS.md  STATUS.md  ref.md
.claude/: settings.json
.claude/agents/: reverse-engineering.md
.claude/hooks/: legitimacy-context.json
boot/: ARCH.md  CONVENTIONS.md  MANIFEST.json  README.md  launch.py  log_gui.py  patches.json
boot/allnet/: FACTS.md  README.md  billing.js  connection.js
boot/ambackup/: FACTS.md
boot/ambilling/: FACTS.md  status.js
boot/amdebug/: FACTS.md  diag.js
boot/amdongle/: FACTS.md  diag.js  patch.js
boot/amgfetcher/: FACTS.md  getstatus.js  recv.js
boot/amjvs/: FACTS.md  input.js  state.js  watchdog.js
boot/amnet/: FACTS.md  network_type.js  state.js
boot/amplatform/: FACTS.md  hwdetect.js  identity.js
boot/amrtc/: FACTS.md  rtc.js
boot/app/: FACTS.md  exit.js  no_selfshutdown.js  windowed.js
boot/devices/: FACTS.md  cardreader.js  presence.js  storage.js  touchpanel.js  usbio.js
boot/keychip/: FACTS.md  client.js  region.js  setup.js
boot/lib/: base.js  patch_table.js
boot/mxdrivers/: FACTS.md  devices.js
boot/mxgfetcher/: FACTS.md  diag.js  getstatus.js  recv.js
boot/mxkeychip/: FACTS.md  client.js  diag.js  region.js  setup.js
boot/mxmaster/: FACTS.md
boot/mxnetwork/: FACTS.md  README.md  diag.js  state.js
boot/mxsegaboot/: FACTS.md  startup.js
boot/mxstorage/: FACTS.md  presence.js
boot/startup/: FACTS.md  extend_image.js  pras.js
cabinet/: default.toml
data/: known_names.json  re_symbols.json
docs/: architecture.md  bsnk_ringedge.md  bugs_archive.md  ghidra_mcp_setup.md  iso_extraction.md  micetools.md  ringedge_system.md  standalone_launcher.md  teknoparrot.md
facts/: _index.md  ambilling.md  amdebug.md  amdongle.md  amjvs.md  amplatform.md  amrtc.md  app.md  bugs.md  devices.md  gameflow.md  mxdrivers.md  mxgfetcher.md  mxkeychip.md  mxnetwork.md  mxsegaboot.md  mxstorage.md  port_status.md  workflow.md
src/host/: allnet.c  capture.c  config.c  dbglog.c  exitlog.c  gamehook.c  hook.c  host.c  host.h  keychip_proto.c  keychip_proto.h  keychip_server.c  loader.c  log.c  netobs.c  reload.c  status.c  status.h  windowed.c
src/logic/: abi.h  api.c  crackproof.c  patches.c  patches.h
tools/: README.md  make_card.py
(+64 files in other folders)
